Revision history for Mojolicious-Plugin-BootstrapHelpers

{{$NEXT}}

0.006  2014-08-31 17:37:26 CEST
    - Added table helpers
    - Added helper to include bootstrap css and js (and possibly jquery)

0.005  2014-08-31 15:01:23 CEST
    - Allow dashes in id, but change them to underscores in nam
    - Documented buttons

0.004  2014-08-31 14:14:19 CEST
    - Added many shortcuts (and adjusted documentation)
    - Documented options
    - Cleaned up internals
    - Improved test layout
    - Cleaned up cpanfile

0.003  2014-08-31 11:21:10 CEST
    - Removed unnecessary dependency
    - Much improved tests (with Test::Mojo::Trim)

0.002  2014-08-30 22:50:05 CEST
    - First public release.

0.001  2014-08-30 22:47:03 CEST
    - Initial release